# auto-featurs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: pipeline.py
core/base/: column_specification.py  column_types.py
core/base/tests/: test_column_specification.py
core/pipeline/: optimizer.py  pipeline.py
core/pipeline/tests/: test_optimizer.py  test_pipeline.py
core/transformers/: aggregating_transformers.py  base.py  comparison_transformers.py  lagged_transformer.py  numeric_transformers.py  over_wrapper.py  rolling_wrapper.py
core/transformers/tests/: test_aggregating_transformers.py  test_comparison_transformers.py  test_lagged_transformer.py  test_numeric_transformers.py  test_over_wrapper.py  test_rolling_wrapper.py
examples/: datasets.py  example_pipeline.py
src/auto_featurs/: column_selectors.py
src/auto_featurs/base/: column_specification.py  schema.py
src/auto_featurs/base/tests/: test_column_specification.py  test_schema.py
src/auto_featurs/core/base/tests/: test_column_specification.py
src/auto_featurs/core/pipeline/: optimizer.py  pipeline.py
src/auto_featurs/core/pipeline/tests/: test_optimizer.py  test_pipeline.py
src/auto_featurs/core/transformers/: aggregating_transformers.py  base.py  comparison_transformers.py  numeric_transformers.py  over_wrapper.py  rolling_wrapper.py
src/auto_featurs/dataset/: dataset.py
src/auto_featurs/dataset/tests/: test_dataset.py
src/auto_featurs/feature_selection/: feature_selector.py
src/auto_featurs/feature_selection/tests/: test_feature_selector.py
src/auto_featurs/pipeline/: optimizer.py  pipeline.py  validator.py
src/auto_featurs/pipeline/tests/: test_optimizer.py  test_pipeline.py  test_validator.py
src/auto_featurs/transformers/: aggregating_transformers.py  base.py  comparison_transformers.py  datetime_transformers.py  numeric_transformers.py  over_wrapper.py  rolling_wrapper.py  text_transformers.py
src/auto_featurs/transformers/tests/: test_aggregating_transformers.py  test_comparison_transformers.py  test_datetime_transformers.py  test_numeric_transformers.py  test_over_wrapper.py  test_rolling_wrapper.py  test_text_transformers.py
src/auto_featurs/utils/: constants.py  utils.py  utils_for_tests.py
src/auto_featurs/utils/tests/: test_utils.py
utils/: utils.py  utils_for_tests.py
utils/tests/: test_utils.py
(+5 files in other folders)
