[project]
name = "auto-featurs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]
