[project]
name = "auto-featurs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_reexport = true
no_error_summary = true
local_partial_types = true
disallow_untyped_defs = true
strict = true
no_warn_return_any = true
disallow_any_generics = false

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
line-length = 200
target-version = "py313"

[tool.ruff.lint]
preview = true
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "UP007", # Use `X | Y` for type annotations (triggers on Optional[])
    "UP045", # Allow Optional[]
]

select = [
    'A', # flake8-builtins
    'B', # flake8-bugbear
    'BLE', # flake8-blind-except
    'C4', # flake8-comprehensions
    'C90', # mccabe
    'COM', # flake8-commas
    'DTZ', # flake8-datetimez
    'E', # pycodestyle / Error
    'ERA', # eradicate
    'F', # Pyflakes
    'I', # isort
    'N', # pep8-naming
    'NPY', # NumPy-specific rules
    'PIE', # flake8-pie
    'PT', # flake8-pytest-style
    'PTH', # flake8-use-pathlib
    'S', # flake8-bandit
    'SIM', # flake8-simplify
    'TID', # flake8-tidy-imports
    'UP', # pyupgrade
    'W', # pycodestyle / Warning
    'ANN', # function typing
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]  # allow asserts in tests
# "examples/" = ["F401"]  # ignore unused imports in jupyter notebook templates
